# auto_sim

./: README.md
auto_agent/: README.md
auto_agent/auto_circle_generator/: CMakeLists.txt  package.xml
auto_agent/auto_circle_generator/scripts/: check_csv_t1v1.py  check_csv_t2v1.py  check_csv_t2v2.py  check_csv_t3.py  edit_csv_v1.py  edit_csv_v2.py  test_Real_Packet_Generator_Surgeon.py
auto_agent/auto_circle_generator/src/: Audo_deb_v1.hpp  Auto_deb_v1.cpp  Raven_PathPlanner.h  motion_path_publish_v1.cpp  motion_path_publish_v2.cpp  motion_path_publish_v3.cpp  motion_path_publish_v3_v2.cpp  motion_path_publish_v4.cpp  motion_path_publish_v5.cpp  move_v1.cpp  move_v2.cpp  moveit_kine.cpp
auto_agent/auto_circle_generator/src/dsn/: add_label_ravenstate.cpp  dsn_automove_v1.cpp  dsn_automove_v2.cpp  dsn_automove_v3.cpp  dsn_automove_v3_v2.cpp  dsn_automove_v4.cpp  dsn_csv_t1_v1.cpp  dsn_csv_t2_v1.cpp  dsn_path_python_v1.py  dsn_path_v1.cpp  dsn_path_v2.cpp
auto_agent/auto_circle_generator/src/tutorial/: robot_model_and_robot_state_tutorial.cpp
auto_agent/image_analysis/: CMakeLists.txt  package.xml
auto_agent/image_analysis/scripts/: localize.py
auto_agent/image_analysis/src/: color_detection.cpp
auto_agent/my_urdf/: CMakeLists.txt  package.xml
auto_agent/my_urdf/Raven_files/: URDF_dome_upR10mm.STL  steel_frame.STL
auto_agent/pc_analysis/: CMakeLists.txt  package.xml
auto_agent/pc_analysis/msg/: obj_pos.msg
auto_agent/pc_analysis/src/: example_planarsegmentation.cpp  paththrough.cpp  pc_filter_color_based_v1.cpp  pc_filter_color_based_v2.cpp  pc_get_obj_pos_v1.cpp
auto_agent/raven_frame/: CMakeLists.txt  frame_test.rviz  package.xml  ravenII_2arm_3dof_dome.urdf  ravenII_2arm_7dof_frame.urdf  ravenII_3dof_frame.urdf  ravenII_5dof.urdf
auto_agent/sw_3dof/: .setup_assistant  CMakeLists.txt  package.xml
auto_agent/sw_3dof/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ompl_planning_bk.yaml  raven_2.srdf
auto_agent/sw_3dof/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
auto_agent/sw_3dof_frame/: .setup_assistant  CMakeLists.txt  package.xml
auto_agent/sw_3dof_frame/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  raven_2.srdf  sensors_kinect_pointcloud.yaml
auto_agent/sw_3dof_frame/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
auto_agent/sw_5dof/: .setup_assistant  CMakeLists.txt  package.xml
auto_agent/sw_5dof/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  raven_2.srdf  ros_controllers.yaml
auto_agent/sw_5dof/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
auto_agent/sw_6dof_gazebo/: .setup_assistant  CMakeLists.txt  package.xml
auto_agent/sw_6dof_gazebo/config/: fake_controllers.yaml  joint_limits.yaml  kinematics_track.yaml  ompl_planning.yaml  raven_2arm.srdf  ros_controllers.yaml
auto_agent/sw_6dof_gazebo/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  (+12 more)
raven2/: CMakeLists.txt
raven2/include/: DS1.h
raven2/msg/: raven_state.msg
raven2/src/: pub_automove.py
raven2/srv/: SegLabel.srv
raven_2arm/: CMakeLists.txt  README.md  package.xml
raven_2arm/config/: raven_2arm_control.yaml
raven_2arm/launch/: display_rviz_ori_2arm.launch  display_rviz_raven_2arm.launch  gazebo_test.launch  raven_2arm.launch  raven_2arm_control.launch  right_arm_test.launch
raven_2arm/lib/: readme
raven_2arm/rviz/: raven_2arm.rviz  urdf.rviz  urdf2.rviz
raven_2arm/scripts/: msg_bridge_abs.py  msg_bridge_pid.py  tools_quaternion.py
raven_2arm/urdf/: left_arm.xacro  raven_2arm.gazebo  raven_2arm.xacro  raven_2arm_bk_ori_pose.xacro  raven_2arm_no.xacro  raven_gazebo_6dof.urdf  raven_gazebo_6dof_left.urdf  right_arm.xacro
raven_2arm/worlds/: raven_2arm.world
raven_ros_gazebo/: CMakeLists.txt  README.docx  package.xml
raven_ros_gazebo/config/: ravenII_control.yaml
raven_ros_gazebo/launch/: ravenII_control.launch  ravenII_world.launch
raven_ros_gazebo/scripts/: inv_kin.py  msg_converter_abs.py  msg_converter_pid.py  test_inv_kin.py
raven_ros_gazebo/urdf/: ravenII.xacro  ravenII_bac.urdf
raven_ros_gazebo/worlds/: ravenII.world
raven_visualization/: CMakeLists.txt  box.urdf  box_bk.urdf  floating_table.urdf  package.xml  ravenII_2arm.urdf  ravenII_2arm_bk.urdf  ravenII_3dof_frame.urdf  raven_2.rviz  raven_visualization.launch  raven_visualization_rviz.launch
raven_visualization/Raven_files/: OneHole.dae
raven_visualization/urdf/: ravenII.gazebo
raven_visualization/worlds/: pick_setup.world
(+84 files in other folders)
